syntax = "proto3";

option java_package = "com.jkuester.unlauncher.datastore";
option java_multiple_files = true;

message QuickButtonPreferences {
  message QuickButton {
    int32 icon_id = 1;
  }
  QuickButton left_button = 1;
  QuickButton center_button = 2;
  QuickButton right_button = 3;
}
